# Sasha

./: .gitignore  Readme.md  config_model.yml  empirical_components.yml  pyproject.toml  requirements.txt  setup_env.py
examples/: article_parametrizations.ipynb  simulate_inference.ipynb  simulate_spectrum.ipynb
sasha/sasha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sasha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sasha/config/: backend.py  configLoader.py  param_space.yml  print_simu.py  simulated_conditions.yml  simulationLoader.py
src/sasha/lk_inference/: homoscedastic_model.py  mvg_model.py  statmodel_base.py
src/sasha/lk_inference/models_registry/: homoscedastic_registry.py
src/sasha/model/bottom/: bottom_base.py  bottom_linear.py
src/sasha/model/common/: base.py  core.py  loader.py  spectral.py  validation.py
src/sasha/model/design/: design_base.py  design_rediometry.py  design_response.py
src/sasha/model/lee/: lee_model.py
src/sasha/model/radiometry/: radiometry.py  radiometry_registry.py
src/sasha/optimizers/: opt_plk_scipy.py  optimizer.py  parameterManager.py  printer.py
src/sasha/utils/: array_utils.py  collector.py  colors.py  curve_utils.py  interp_utils.py  notation_mapping.json  plotting.py
src/sasha/wrappers/: run_inference.py  run_model.py
src/shallow_sa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/share/env_input/: abs_spec_micro.txt  abs_spec_nano.txt  awater.txt  awater2.txt  phytodive_iop.json  sh_ref_mart.txt  target_011.txt  target_035.txt
(+86 files in other folders)
